style/style.css
/* ... */
#albumVue {
  width: 100vw;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  margin-top: 103px;
}

#albumVue .buttons {
  margin-top: 100px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-item-align: center;
      align-self: center;
}

#albumVue .buttons .arrow-wrapper {
  height: 50px;
  width: 50px;
}

#albumVue .buttons .arrow-wrapper:hover {
  border-radius: 50%;
}

#albumVue .buttons .arrow-wrapper .arrow {
  height: 100%;
  width: 100%;
}

#albumVue .buttons .arrow-wrapper .arrow:hover {
  cursor: pointer;
}

#albumVue .buttons .arrow-wrapper .arrow-next {
  -webkit-transform: rotate(180deg);
          transform: rotate(180deg);
}

#albumVue .buttons #randomButton {
  margin: 0 50px;
}

#albumVue .content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  width: 100%;
}

#albumVue .content .album-metadata {
  text-align: right;
  width: 45%;
}

#albumVue .content .album-metadata .album-title {
  font-style: italic;
  font-size: 32px;
}

#albumVue .content .album-metadata .album-selected-track {
  font-style: italic;
}

#albumVue .content .album-metadata #player {
  display: block;
  border: solid 3px #a18a54;
  margin-top: 14px;
}

#albumVue .content .album-cover-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 45px;
  width: 300px;
  height: 300px;
  border: solid 5px #a18a54;
  width: auto;
}

#albumVue .content .album-cover-wrapper img {
  height: 100%;
  display: block;
}

#albumVue .content .album-criteria {
  width: 45%;
}

#timelineVue {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
  width: 100vw;
  height: 23vh;
  overflow-x: scroll;
  overflow-y: hidden;
  position: fixed;
  bottom: 0;
}

#timelineVue .album-wrapper {
  display: contents;
}

#timelineVue .album-wrapper .album-placeholder {
  height: 23vh;
  width: 23vh;
  background: #a18a54;
  border-top: solid 6px #a18a54;
  margin-top: 20px;
  display: block;
}

#timelineVue .album-wrapper .album-placeholder .album-cover {
  height: 100%;
}

#timelineVue .album-wrapper .album-placeholder .album-cover:hover {
  cursor: pointer;
}

#timelineVue .album-wrapper .album-year {
  text-align: center;
  z-index: 1;
  background: #030504;
  color: #a18a54;
  padding: 5px 20px;
  display: table;
  width: 95px;
  margin-right: -95px;
  border: solid 3px #a18a54;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

#atticVue {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  padding: 159px 20px 50px 20px;
}

#atticVue #player {
  display: none;
}

#atticVue .album-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  position: relative;
  height: 220px;
  width: 220px;
}

#atticVue .album-wrapper:hover .album-infos {
  opacity: 1;
  cursor: pointer;
}

#atticVue .album-wrapper .album-infos {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  height: 100%;
  width: 100%;
  font-size: 20px;
  text-align: center;
  background: rgba(0, 0, 0, 0.7);
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

#atticVue .album-wrapper .album-infos .album-rating {
  font-style: italic;
  font-weight: bold;
  border-top: solid;
  border-bottom: solid;
}

#atticVue .album-wrapper img {
  height: 220px;
  width: 220px;
}

#atticVue .album-wrapper img:hover {
  cursor: pointer;
}

#gemsVue {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 133px 20px 50px 20px;
}

#gemsVue .album-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  border-bottom: solid 1px;
  width: 80%;
  padding: 100px;
}

#gemsVue .album-wrapper:last-of-type {
  border: none;
}

#gemsVue .album-wrapper:nth-child(even) {
  -webkit-box-orient: horizontal;
  -webkit-box-direction: reverse;
      -ms-flex-direction: row-reverse;
          flex-direction: row-reverse;
  text-align: right;
}

#gemsVue .album-wrapper .album-cover {
  width: 300px;
  height: 300px;
  border: solid 5px #a18a54;
  margin: 0 30px;
  cursor: pointer;
  display: block;
  -webkit-box-shadow: 0px 0px 500px -50px #a18a54;
          box-shadow: 0px 0px 500px -50px #a18a54;
}
/* ... */

